# attic-iac

./: .bazelrc  .env.example  .envrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  CONTRIBUTING.md  Justfile  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  flake.nix  llms.md  llms.txt  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json5
.githooks/: commit-msg  pre-commit  setup.sh
.github/actions/setup-flywheel/: action.yml
.github/workflows/: pages.yml
.gitlab/ci/jobs/: bazel-build.gitlab-ci.yml  k8s-deploy.gitlab-ci.yml  nix-build.gitlab-ci.yml  nix-check.gitlab-ci.yml  runners-deploy.gitlab-ci.yml  tofu-apply.gitlab-ci.yml  tofu-plan.gitlab-ci.yml
.gitlab/ci/templates/: civo-auth.gitlab-ci.yml  hpa-deploy.gitlab-ci.yml  tofu-base.gitlab-ci.yml  verify-health.gitlab-ci.yml
app/: package.json
app/scripts/: generate-environments.ts
app/src/: app.css
app/src/lib/components/metrics/: HPAGauge.svelte
app/src/lib/components/nav/: Sidebar.svelte
app/src/lib/config/: app-config.json  environments.json
app/src/lib/server/: config.ts
app/src/lib/server/auth/: session.ts
app/src/lib/server/gitops/: config.ts  pipeline.ts
app/src/lib/server/k8s/: client.ts
app/src/lib/server/prometheus/: client.ts
app/src/lib/types/: environment.ts
app/src/routes/: +layout.server.ts  +layout.svelte
app/src/routes/api/gitops/config/: +server.ts
app/src/routes/api/gitops/drift/: +server.ts
app/src/routes/api/gitops/submit/: +server.ts
app/src/routes/auth/logout/: +server.ts
app/src/routes/monitoring/: +page.svelte
app/src/routes/runners/[name]/: +page.svelte
ci-templates/: bates-ils-runners.gitlab-ci.yml
config/: organization.example.yaml
docs/: getting-started-guide.md  greedy-build-pattern.md  index.md  recursive-dogfooding.md
docs-site/: BUILD.bazel  mdsvex.config.js  package.json  svelte.config.js  vite.config.ts
docs-site/scripts/: generate-llms-txt.js
docs-site/src/: app.css  app.html
docs-site/src/lib/components/: DocNav.svelte  MdsvexLayout.svelte  MermaidRenderer.svelte  TableOfContents.svelte
docs-site/src/lib/server/: docs.ts
docs-site/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
docs-site/src/routes/docs/[...slug]/: +page.server.ts  +page.svelte
docs/architecture/: bzlmod-topology.md  multi-repo-layout.md  overlay-system.md  recursive-dogfooding.md  renovatebot-flywheel.md
docs/build-system/: bazel-targets.md  containers.md  greedy-build-pattern.md  watch-store.md
docs/ci-cd/: deployment-flow.md  overlay-pipelines.md  pipeline-overview.md
docs/infrastructure/: clusters-and-environments.md  customization-guide.md  overlay-creation.md  proxy-and-access.md  quick-start.md
docs/k8s-reference/: README.md
docs/k8s-reference/base/: backup-schedule.yaml  namespace.yaml  secrets-template.yaml
docs/reference/: config-reference.md  environment-variables.md  justfile-commands.md  tofu-modules.md
docs/research/: bazel-remote-nixpkgs-integration.md  campus-build-infrastructure.md  comprehensive-build-infrastructure-plan.md  package-repository-options.md
docs/runners/: README.md  docker-builds.md  hpa-tuning.md  nix-builds.md  runbook.md  runner-selection.md  security-model.md  troubleshooting.md
examples/flake/: flake.nix
examples/gitlab/: .gitlab-ci.yml
k8s/agent/: beehive-config.yaml
k8s/base/: cnpg-cluster.yaml  deployment.yaml  hpa.yaml  ingress.yaml  network-policy.yaml  secrets-template.yaml  service.yaml
k8s/monitoring/: alerts.yaml  dashboard.json  logging.yaml  servicemonitor.yaml
k8s/runners/: cleanup-cronjob.yaml
nix/: default.nix  shell.nix
nix/overlays/: default.nix
scripts/: cache-warm.sh  ci-health-check.sh  deploy.sh  generate-attic-token.sh  generate-ci-token.sh  generate-secrets.sh  health-check.sh  init-cache.sh  rotate-tokens.sh
tests/: BUILD.bazel  config_validation.sh  tofu_validate.sh
tex_research/glorious-flywheel/: glorious-flywheel.tex  references.bib
tofu/modules/: BUILD.bazel
tofu/modules/arc-runner/: locals.tf  main.tf  variables.tf
tofu/modules/attic-tokens/: main.tf  outputs.tf  variables.tf
tofu/modules/bazel-cache/: hpa.tf  main.tf  monitoring.tf  outputs.tf  variables.tf
tofu/modules/civo-object-store/: main.tf
tofu/modules/cnpg-operator/: main.tf  outputs.tf  variables.tf
tofu/modules/dns-record/: main.tf  outputs.tf  variables.tf
tofu/modules/gitlab-agent-rbac/: main.tf  outputs.tf  variables.tf
tofu/modules/gitlab-runner/: locals.tf  main.tf  variables.tf
tofu/modules/gitlab-user-runner/: main.tf  outputs.tf  variables.tf  versions.tf
tofu/modules/hpa-deployment/: hpa.tf  main.tf  outputs.tf  variables.tf
tofu/modules/minio-operator/: main.tf  outputs.tf  variables.tf
tofu/modules/minio-tenant/: lifecycle.tf  main.tf  outputs.tf  variables.tf
tofu/modules/postgresql-cnpg/: backup.tf  main.tf  monitoring.tf  network-policy.tf  outputs.tf  variables.tf
tofu/modules/postgresql-neon/: main.tf
tofu/modules/runner-cleanup/: variables.tf
tofu/modules/runner-dashboard/: main.tf  variables.tf
tofu/modules/runner-dashboard/templates/: Caddyfile.tpl
tofu/modules/runner-security/: main.tf  quotas.tf  variables.tf
tofu/stacks/arc-runners/: main.tf  terraform.tfvars.example  variables.tf
tofu/stacks/attic/: Justfile  attic.tfplan  backend.tf  beehive.tfvars  main.tf  production.tfvars  rigel.tfvars  staging.tfvars  terraform.tfvars.example  variables.tf
tofu/stacks/bates-ils-runners/: beehive.tfvars  main.tf  variables.tf
tofu/stacks/gitlab-runners/: main.tf
tofu/stacks/runner-dashboard/: main.tf  variables.tf
tofu/tests/: validate-modules.sh  validate-variables.sh
