# OpenTofu Modules - Build Configuration
#
# Reusable infrastructure modules for Bates ILS deployments.
# Uses custom tofu_module rules for validation and formatting tests.

load("//build/tofu:rules.bzl", "tofu_fmt_test", "tofu_module", "tofu_validate")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# OpenTofu Module Definitions
# =============================================================================

tofu_module(
    name = "bazel_cache",
    srcs = glob(["bazel-cache/*.tf"]),
    providers = [
        "kubernetes",
        "kubectl",
    ],
)

tofu_module(
    name = "cnpg_operator",
    srcs = glob(["cnpg-operator/*.tf"]),
    providers = [
        "helm",
        "kubernetes",
    ],
)

tofu_module(
    name = "dns_record",
    srcs = glob(["dns-record/*.tf"]),
    providers = [
        "kubernetes",
        "kubectl",
    ],
)

tofu_module(
    name = "gitlab_runner",
    srcs = glob(["gitlab-runner/*.tf"]),
    providers = [
        "helm",
        "kubernetes",
    ],
)

tofu_module(
    name = "hpa_deployment",
    srcs = glob(["hpa-deployment/*.tf"]),
    providers = ["kubernetes"],
)

tofu_module(
    name = "minio_operator",
    srcs = glob(["minio-operator/*.tf"]),
    providers = [
        "helm",
        "kubernetes",
    ],
)

tofu_module(
    name = "minio_tenant",
    srcs = glob(["minio-tenant/*.tf"]),
    providers = [
        "kubernetes",
        "kubectl",
    ],
)

tofu_module(
    name = "postgresql_cnpg",
    srcs = glob(["postgresql-cnpg/*.tf"]),
    providers = [
        "kubernetes",
        "kubectl",
    ],
)

# =============================================================================
# Validation Tests (run with `bazel test //tofu/modules:*_validate`)
# =============================================================================

tofu_validate(
    name = "bazel_cache_validate",
    module = ":bazel_cache",
    tags = [
        "external",
        "tofu",
        "validation",
    ],
)

tofu_validate(
    name = "cnpg_operator_validate",
    module = ":cnpg_operator",
    tags = [
        "external",
        "tofu",
        "validation",
    ],
)

tofu_validate(
    name = "dns_record_validate",
    module = ":dns_record",
    tags = [
        "external",
        "tofu",
        "validation",
    ],
)

tofu_validate(
    name = "gitlab_runner_validate",
    module = ":gitlab_runner",
    tags = [
        "external",
        "tofu",
        "validation",
    ],
)

tofu_validate(
    name = "hpa_deployment_validate",
    module = ":hpa_deployment",
    tags = [
        "external",
        "tofu",
        "validation",
    ],
)

tofu_validate(
    name = "minio_operator_validate",
    module = ":minio_operator",
    tags = [
        "external",
        "tofu",
        "validation",
    ],
)

tofu_validate(
    name = "minio_tenant_validate",
    module = ":minio_tenant",
    tags = [
        "external",
        "tofu",
        "validation",
    ],
)

tofu_validate(
    name = "postgresql_cnpg_validate",
    module = ":postgresql_cnpg",
    tags = [
        "external",
        "tofu",
        "validation",
    ],
)

# =============================================================================
# Format Tests (run with `bazel test //tofu/modules:*_fmt_test`)
# =============================================================================

tofu_fmt_test(
    name = "bazel_cache_fmt_test",
    module = ":bazel_cache",
    tags = [
        "formatting",
        "tofu",
    ],
)

tofu_fmt_test(
    name = "cnpg_operator_fmt_test",
    module = ":cnpg_operator",
    tags = [
        "formatting",
        "tofu",
    ],
)

tofu_fmt_test(
    name = "dns_record_fmt_test",
    module = ":dns_record",
    tags = [
        "formatting",
        "tofu",
    ],
)

tofu_fmt_test(
    name = "gitlab_runner_fmt_test",
    module = ":gitlab_runner",
    tags = [
        "formatting",
        "tofu",
    ],
)

tofu_fmt_test(
    name = "hpa_deployment_fmt_test",
    module = ":hpa_deployment",
    tags = [
        "formatting",
        "tofu",
    ],
)

tofu_fmt_test(
    name = "minio_operator_fmt_test",
    module = ":minio_operator",
    tags = [
        "formatting",
        "tofu",
    ],
)

tofu_fmt_test(
    name = "minio_tenant_fmt_test",
    module = ":minio_tenant",
    tags = [
        "formatting",
        "tofu",
    ],
)

tofu_fmt_test(
    name = "postgresql_cnpg_fmt_test",
    module = ":postgresql_cnpg",
    tags = [
        "formatting",
        "tofu",
    ],
)

# =============================================================================
# Combined Groups
# =============================================================================

# All modules combined
filegroup(
    name = "all_modules",
    srcs = [
        ":bazel_cache",
        ":cnpg_operator",
        ":dns_record",
        ":gitlab_runner",
        ":hpa_deployment",
        ":minio_operator",
        ":minio_tenant",
        ":postgresql_cnpg",
    ],
)

# Storage-related modules
filegroup(
    name = "storage_modules",
    srcs = [
        ":minio_operator",
        ":minio_tenant",
        ":postgresql_cnpg",
    ],
)

# Kubernetes modules
filegroup(
    name = "k8s_modules",
    srcs = [
        ":gitlab_runner",
        ":hpa_deployment",
    ],
)

# Build infrastructure modules
filegroup(
    name = "build_infra_modules",
    srcs = [
        ":bazel_cache",
    ],
)

# =============================================================================
# Test Suites
# =============================================================================

# All validation tests
test_suite(
    name = "all_validate",
    tags = ["validation"],
    tests = [
        ":bazel_cache_validate",
        ":cnpg_operator_validate",
        ":dns_record_validate",
        ":gitlab_runner_validate",
        ":hpa_deployment_validate",
        ":minio_operator_validate",
        ":minio_tenant_validate",
        ":postgresql_cnpg_validate",
    ],
)

# All format tests
test_suite(
    name = "all_fmt_test",
    tags = ["formatting"],
    tests = [
        ":bazel_cache_fmt_test",
        ":cnpg_operator_fmt_test",
        ":dns_record_fmt_test",
        ":gitlab_runner_fmt_test",
        ":hpa_deployment_fmt_test",
        ":minio_operator_fmt_test",
        ":minio_tenant_fmt_test",
        ":postgresql_cnpg_fmt_test",
    ],
)
